testsuite/tests/properties/invalid_node_builder/bad_build_type.lkt
import common_empty

class DerivedNode: EmptyNode {
}

class Example: BaseExample {
    @lazy prop: DerivedNode = EmptyNode.builder().build()
}
